# chipflow-lib

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  CNAME  DCO.md  Makefile  README.md  architecture.html  chipflow-commands.html  chipflow-toml-guide.html  contributor-pin-signature-internals.html  genindex.html  getting-started.html  index.html  objects.inv  platform-api.html  py-modindex.html  pyproject.toml  rtl-wrapper.html  search.html  searchindex.js  simulation-guide.html  test.py  using-pin-signatures.html
.doctrees/: architecture.doctree  chipflow-commands.doctree  chipflow-toml-guide.doctree  environment.pickle  getting-started.doctree  index.doctree  rtl-wrapper.doctree  using-pin-signatures.doctree
.github/workflows/: build-docs.yml  coverage.yml  deploy-docs.yml  main.yaml  preview-docs.yml  test-examples.yml  trigger-docs.yml
_sources/: architecture.rst.txt  chipflow-commands.rst.txt  chipflow-toml-guide.rst.txt  getting-started.rst.txt  index.rst.txt  using-pin-signatures.rst.txt
autoapi/: index.html
autoapi/chipflow_lib/: index.html
chipflow/: __init__.py  _pin_lock.py  auth.py  auth_command.py  cli.py  config.py  config_models.py  errors.py  packages.py  serialization.py
chipflow/common/: __init__.py
chipflow/config/: models.py
chipflow/models/: spiflash.cc  uart.cc  wb_mon.h
chipflow/packaging/: __init__.py  base.py  lockfile.py  openframe.py  pins.py  standard.py  utils.py
chipflow/platform/: __init__.py  base.py  silicon.py  silicon_step.py  sim.py  sim_step.py
chipflow/rtl/: __init__.py  blackbox.py  wrapper.py
chipflow/sim/: __init__.py  build.py  cxxrtl.py
chipflow/steps/: __init__.py  board.py  silicon.py  sim.py  software.py
chipflow_lib/: __init__.py  _appresponse.py  _config_models.py  _doit.py  _pin_lock.py  _signatures.py  boards.py  chip_wrapper.py  cli.py  config.py  config_models.py  pin_lock.py  silicon_platform.py  sim_platform.py  utils.py
chipflow_lib/config/: __init__.py  models.py  parser.py
chipflow_lib/contexts/: board.py  silicon.py  sim.py  software.py
chipflow_lib/models/: hyperram.cc  spiflash.cc  spiflash.h  uart.cc  wb_mon.cc  wb_mon.h
chipflow_lib/packaging/: allocation.py  base.py  commands.py  grid_array.py  openframe.py  port_desc.py  standard.py  utils.py
chipflow_lib/platform/: __init__.py  board_step.py  silicon.py  silicon_step.py  sim.py  sim_step.py  software.py  software_step.py
chipflow_lib/providers/: board_ulx3s.py  silicon.py  sim.py
chipflow_lib/software/: _builder.py  soft_gen.py
chipflow_lib/steps/: __init__.py  _json_compare.py  board.py  silicon.py  sim.py  software.py
docs/: UNFINISHED_IDEAS.md  advanced-configuration.rst  architecture.rst  chipflow-commands.rst  chipflow-toml-guide.rst  conf.py  contributor-pin-signature-internals.rst  example-chipflow.toml  getting-started.rst  index.rst  package_pins.md  platform-api.rst  simulation-guide.rst  using-pin-signatures.rst  workflows.rst
docs/unfinished/: advanced-configuration.rst  create-project.rst  workflows.rst
pr-preview/pr-101/: objects.inv  searchindex.js
pr-preview/pr-102/: index.html  objects.inv
pr-preview/pr-103/: objects.inv
pr-preview/pr-104/: chipflow-toml-guide.html  objects.inv  py-modindex.html  searchindex.js
pr-preview/pr-105/: objects.inv  search.html
pr-preview/pr-106/: objects.inv
pr-preview/pr-107/: .buildinfo  objects.inv
pr-preview/pr-108/: chipflow-commands.html  objects.inv
pr-preview/pr-109/: genindex.html  objects.inv
pr-preview/pr-110/: objects.inv  searchindex.js
pr-preview/pr-111/: objects.inv
pr-preview/pr-112/: objects.inv
pr-preview/pr-114/: chipflow-toml-guide.html  objects.inv
pr-preview/pr-118/: chipflow-toml-guide.html  getting-started.html  index.html  objects.inv  searchindex.js
pr-preview/pr-119/: objects.inv
pr-preview/pr-120/: objects.inv
pr-preview/pr-122/: objects.inv  searchindex.js
pr-preview/pr-123/: objects.inv
pr-preview/pr-124/: chipflow-commands.html  genindex.html  objects.inv  searchindex.js
pr-preview/pr-127/: objects.inv
pr-preview/pr-128/: objects.inv  py-modindex.html
pr-preview/pr-129/: objects.inv
pr-preview/pr-130/: chipflow-toml-guide.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-preview/pr-131/: objects.inv
pr-preview/pr-132/: chipflow-commands.html  chipflow-toml-guide.html  genindex.html  objects.inv  py-modindex.html  search.html
pr-preview/pr-133/: chipflow-commands.html  genindex.html  getting-started.html  objects.inv  searchindex.js
pr-preview/pr-134/: genindex.html  objects.inv  searchindex.js
pr-preview/pr-136/: genindex.html  objects.inv  searchindex.js
pr-preview/pr-138/: getting-started.html  index.html  objects.inv
pr-preview/pr-139/: genindex.html  objects.inv
pr-preview/pr-142/: genindex.html  objects.inv
pr-preview/pr-143/: chipflow-commands.html  chipflow-toml-guide.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html
pr-preview/pr-144/: architecture.html  contributor-pin-signature-internals.html  genindex.html  getting-started.html  index.html  objects.inv  platform-api.html  searchindex.js  simulation-guide.html  using-pin-signatures.html
pr-preview/pr-145/: architecture.html  chipflow-commands.html  genindex.html  (+8 more)
tests/: test_auth.py  test_blackbox_wrapper.py  test_block_package.py  test_buffers.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_models.py  test_cxxrtl_sim.py  test_errors.py  test_heartbeat.py  test_init.py  test_package_pins.py  test_parse_config.py  test_pin_lock.py  test_pin_lock_advanced.py  test_pin_lock_complete.py  test_rtl_wrapper.py  test_silicon_platform.py  test_silicon_platform_additional.py  test_silicon_platform_amaranth.py  test_silicon_platform_build.py  test_silicon_platform_port.py  test_silicon_step.py  test_silicon_submit.py  test_sim_platform.py  test_software_generator.py  test_steps.py  test_steps_silicon.py  test_utils.py  test_utils_additional.py
tools/: check_project.py  gen_overrides.py  license_check.sh
(+1546 files in other folders)
