# Package sources

# Project metadata

[tool.pdm.version]
source = "scm"

[project]
name = "chipflow-lib"
dynamic = ["version"]
description = "ChipFlow common tools."
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
    {name = "Ross Motley", email = "ross.motley@chipflow.io" },
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.9"
dependencies = [
    "amaranth>=0.5,<0.7",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
    "amaranth-orchard @ git+https://github.com/ChipFlow/amaranth-orchard",
    "yowasp-yosys>=0.41.0.0",
    "yowasp-nextpnr-ecp5>=0.7",
    "yowasp-runtime",
    "tomli>=2.0.1",
    "jsonschema>=4.17.3",
    "doit>=0.36.0",
    "requests>=2.30.0",
]

[project.scripts]
chipflow = "chipflow_lib.cli:run"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.0",
    "sphinx>=7.1.2",
]
lint = [
    "pycodestyle>=2.11",
]

[tool.pdm.scripts]
test.cmd = "pytest"
test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.cmd = "pycodestyle --config=./.pycodestyle chipflow_lib"
document.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
