# Package sources

# Project metadata

[project]
name = "chipflow-lib"
dynamic = ["version"]
description = "ChipFlow common tools."
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
    {name = "Ross Motley", email = "ross.motley@chipflow.io" },
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.10"
dependencies = [
    "amaranth>=0.5,<0.7",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
    "yowasp-yosys>=0.41.0.0",
    "yowasp-nextpnr-ecp5>=0.7",
    "yowasp-runtime",
    "tomli>=2.0.1",
    "jsonschema>=4.8.0",
    "doit>=0.36.0",
    "requests>=2.20",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8",
]

[project.scripts]
chipflow = "chipflow_lib.cli:run"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false

[tool.ruff]
include = ["pyproject.toml", "**/*.py", "chipflow.toml"]

[tool.ruff.lint]
ignore = ['F403', 'F405']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=chipflow_lib --cov-report=term"
test-cov-html.cmd = "pytest --cov=chipflow_lib --cov-report=html"
test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.cmd = "ruff check"
docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
test-silicon.cmd = "pytest tests/test_silicon_platform.py tests/test_silicon_platform_additional.py tests/test_silicon_platform_amaranth.py tests/test_silicon_platform_build.py tests/test_silicon_platform_port.py --cov=chipflow_lib.platforms.silicon --cov-report=term"


[dependency-groups]
lint = [
    "ruff",
    "pytest-cov",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=6.0.0",
]
doc = [
    "sphinx-book-theme>=1.1.3",
    "sphinx-autoapi>=3.5.0",
    "sphinx>=7.3.7",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    ]
