# Package sources

# Project metadata

[project]
name = "chipflow-lib"
dynamic = ["version"]
description = "ChipFlow common tools."
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
    {name = "Ross Motley", email = "ross.motley@chipflow.io" },
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.11"
dependencies = [
    "amaranth[builtin-yosys]>=0.5,<0.7",
    "amaranth-soc @ git+https://github.com/ChipFlow/amaranth-soc",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
    "yowasp-nextpnr-ecp5>=0.7",
    "yowasp-runtime",
    "tomli>=2.0.1",
    "jsonschema>=4.8.0",
    "doit>=0.36.0",
    "requests>=2.20",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11",
    "halo>=0.0.31",
    "yowasp-yosys>=0.55.0.3.post946.dev0",
]

[project.scripts]
chipflow = "chipflow_lib.cli:run"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pyright]
diagnosticMode=true
typeCheckingMode = "standard"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false
reportWildcardImportFromLibrary = false

[tool.ruff]
include = [
    "chipflow_lib/**/*.py",
    "tests/**.py",
    "chipflow.toml",
    "pyproject.toml"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W291", "W293"]
ignore = ['F403', 'F405']


[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=chipflow_lib --cov-report=term"
test-cov-html.cmd = "pytest --cov=chipflow_lib --cov-report=html"
test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.composite = [ "./tools/license_check.sh", "ruff check", "pyright chipflow_lib"]
docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
test-silicon.cmd = "pytest tests/test_silicon_platform.py tests/test_silicon_platform_additional.py tests/test_silicon_platform_amaranth.py tests/test_silicon_platform_build.py tests/test_silicon_platform_port.py --cov=chipflow_lib.platforms.silicon --cov-report=term"
_check-project.call = "tools.check_project:main"
chipflow.shell = "cd $PDM_RUN_CWD && chipflow"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=6.0.0",
    "sphinx-autoapi>=3.5.0",
    "sphinx~=7.4.7",
    "furo>=2024.04.27",
    "tomli-w>=1.2.0",
    "pyright>=1.1.403",
    "amaranth-stubs>=0.1.1",
    "pyrefly>=0.21.0",
    "sphinxcontrib-autoprogram>=0.1.9",
    "sphinx-autodoc-typehints>=2.3.0",
    "autodoc-pydantic>=2.2.0",
    "sphinx-design>=0.6.1",
    "amaranth-stubs>=0.1.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    ]
